# refactored-funicular

./: CMakeLists.txt  main.cpp  task1.cpp  task1.h  task2.cpp  task2.h  task3.cpp  task3.h
